tests/lean/reflect_type_defeq.lean
meta def foo (x : reflected (3 : ℕ)) : reflected ([10] : list ℕ) :=
x -- ERROR